text centerga olindi

--- a/index.css
+++ b/index.css
@@ -34,4 +34,7 @@ main{
     background-color: pink;
     height: 300px;
     border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
